@@ -204,6 +204,8 @@ UI_EN = {
 	UI_trait_unwaveringdesc = "Penalty for movement speed from injuries is decreased.<br>You push back zombies when hit, has a day cooldown.",
 	UI_trait_idealweight = "Ideal Weight",
 	UI_trait_idealweightdesc = "You like to keep your weight in check.<br>You gain 1.5x calories when under 78 weight.<br>You gain 0.75x calories when above 82 weight.",
+	UI_trait_quickrest = "Quick Rest",
+	UI_trait_quickrestdesc = "You automatically rest when sitting still, regardless of where or when.",
 	UI_MoreTraits_Options_ScroungerAnnounce = "Announce Scrounger and Incomprehensive",
     UI_MoreTraits_Options_ScroungerAnnounce_ToolTip = "If you have the Scrounger or Incomprehensive trait, you will be notified if item(s) are found or lost.",
     UI_MoreTraits_Options_ScroungerHighlight = "Highlight Scrounger Containers",
